force-app/main/default/objects/cgcloud__CGCloud_Process_Customization__mdt/cgcloud__CGCloud_Process_Customization__mdt.object-meta.xml
<CustomObject>
    <description>List of possible customization hooks</description>
    <label>CGCloud Process Customization</label>
    <pluralLabel>CGCloud Process Customizations</pluralLabel>
</CustomObject>