force-app/main/default/objects/cgcloud__CGCloud_Process_Customization__mdt/fields/cgcloud__Class__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Class__c</fullName>
    <description>Name of the callable class of the customer to instantiate.</description>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>