force-app/main/default/objects/cgcloud__CGCloud_Process_Customization__mdt/fields/cgcloud__Enabled__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the customization is enabled or disabled.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>