force-app/main/default/objects/cgcloud__CGCloud_Process_Customization__mdt/fields/cgcloud__Method__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Method__c</fullName>
    <description>Action to pass to the call function of the callable class.</description>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>